Mon May 10 01:18:15 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb (loggin): append "\n".

Sun May  9 23:38:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/net/ftp.rb: ported documentation improvement from 1.8 branch

	* lib/net/imap.rb:   ditto

	* lib/net/pop.rb:    ditto

	* lib/net/smtp.rb:   ditto

	* lib/net/telnet.rb: ditto

Sun May  9 23:34:51 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/test_float.rb: added test_strtod to test Float("0").

Sun May  9 13:24:24 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/yaml/store.rb: use FileUtils::copy.

Sun May  9 12:34:26 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regex.c : removed unused file.

Sat May  8 10:53:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_open): open should not ignore block when "to_open"
	  method is used.  [ruby-dev:23478]

Fri May  7 22:07:39 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (mv): new option `force'. [ruby-talk:99457]

	* lib/fileutils.rb: new method for command option reflection:
	  FileUtils.commands, .options, .have_option?, .options_of,
	  .collect_methods.

	* lib/fileutils.rb: module Verbose, NoWrite, DryRun do not have
	  option flags @fileutils_verbose and @fileutils_noop, they make no
	  sense.

Fri May  7 21:50:21 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::parse_include): Allow
	  multiple arguments to 'include'

Fri May  7 21:03:51 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (fu_list): Array() breaks pathes including "\n".
	  [ruby-core:02843]

	* test/fileutils/test_fileutils.rb (mkdir): test "\n" in path.

Fri May  7 20:53:25 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_modify): typo fixed. [ruby-dev:23473]

Fri May  7 11:17:27  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* util.c (ruby_strtod): 0.0000000000000000001 == 0.0 should be false.
	  [ruby-talk:99318] [ruby-dev:23465]
